feat: 登录弹框设计

--- a/pc/src/assets/style/global.less
+++ b/pc/src/assets/style/global.less
@@ -92,3 +92,10 @@ body {
     }
   }
 }
+
+.arco-btn.arco-btn-primary {
+  border: none;
+  height: 40px;
+  border-radius: 100px;
+  background: linear-gradient(135.00deg, rgb(23, 242, 95) 0%,rgb(37, 106, 247) 100%);
+}
