--- a/pc/src/assets/style/global.less
+++ b/pc/src/assets/style/global.less
@@ -99,3 +99,13 @@ body {
   border-radius: 100px;
   background: linear-gradient(135.00deg, rgb(23, 242, 95) 0%,rgb(37, 106, 247) 100%);
 }
+
+.arco-message.arco-message-normal {
+  background: #04080D;
+  border-color: #04080D;
+  border-radius: 4px;
+  box-shadow: 0px 10px 18px 2px rgba(0, 0, 0, 0.1);
+  .arco-message-content {
+    color:  rgba(255, 255, 255, 0.8);
+  }
+}
