--- a/aigc/uni.scss
+++ b/aigc/uni.scss
@@ -1,1 +1,26 @@
 @import '@/uni_modules/uni-scss/variables.scss';
+
+$font-primary-color: #131526;
+$border-grey-color: #CFDAEB;
+$border-gray-color: #A3B4CC;
+$gray-color: #6B748F;
+$link-color: #256AF7;
+
+page {
+	color: $font-primary-color;
+}
+
+button.primary {
+	border-radius: 100px;
+	background: linear-gradient(135.00deg, rgb(23, 242, 95) 0%,rgb(37, 106, 247) 100%);
+	color: #FFFFFF;
+	border: none !important;
+	font-size: 16px;
+	font-weight: 400;
+	
+	&.big {
+		width: 100%;
+		height: 50px;
+		line-height: 50px;
+	}
+}
