feat: 开始写小程序

--- a/aigc/uni.scss
+++ b/aigc/uni.scss
@@ -1,10 +1,12 @@
 @import '@/uni_modules/uni-scss/variables.scss';
 
 $font-primary-color: #131526;
+$font-primary-color2: #344156;
 $border-grey-color: #CFDAEB;
 $border-gray-color: #A3B4CC;
 $gray-color: #6B748F;
 $link-color: #256AF7;
+
 
 page {
 	color: $font-primary-color;
