--- a/pc/src/assets/style/global.less
+++ b/pc/src/assets/style/global.less
@@ -109,3 +109,11 @@ body {
     color:  rgba(255, 255, 255, 0.8);
   }
 }
+
+.icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
