--- a/pc/src/assets/style/global.less
+++ b/pc/src/assets/style/global.less
@@ -119,22 +119,41 @@ body {
   overflow: hidden;
 }
 
-/* 定义滚动条样式 */
-::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
-}
+// /* 定义滚动条样式 */
+// ::-webkit-scrollbar {
+//   width: 5px;
+//   height: 5px;
+// }
 
-/*定义滚动条轨道 内阴影+圆角*/
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 0px rgba(240, 240, 240, 0.5);
-  border-radius: 10px;
-  background-color: rgba(50, 50, 50, .1);
-}
+// /*定义滚动条轨道 内阴影+圆角*/
+// ::-webkit-scrollbar-track {
+//   box-shadow: inset 0 0 0px rgba(240, 240, 240, 0.5);
+//   border-radius: 10px;
+//   background-color: rgba(50, 50, 50, .1);
+// }
 
-/*定义滑块 内阴影+圆角*/
-::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  box-shadow: inset 0 0 0px rgba(240, 240, 240, 0.5);
-  background-color: rgba(50, 50, 50, .3);
+// /*定义滑块 内阴影+圆角*/
+// ::-webkit-scrollbar-thumb {
+//   border-radius: 10px;
+//   box-shadow: inset 0 0 0px rgba(240, 240, 240, 0.5);
+//   background-color: rgba(50, 50, 50, .3);
+// }
+
+body{
+  margin: 0;
+  overflow: overlay;
+}
+::-webkit-scrollbar{
+  background-color: transparent;
+  width: 12px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: transparent;
+  border-radius: 8px;
+  background-clip: content-box;
+  border: 2px solid transparent;
+}
+body[scroll]::-webkit-scrollbar-thumb,
+::-webkit-scrollbar-thumb:hover{
+  background-color: rgba(0,0,0,.5);
 }
