--- a/pc/src/assets/style/global.less
+++ b/pc/src/assets/style/global.less
@@ -94,8 +94,12 @@ body {
   }
 }
 
+.arco-modal-header {
+  display: none !important;
+}
+
 .arco-btn.arco-btn-primary {
-  border: none;
+  border: none !important;
   height: 40px;
   border-radius: 100px;
   background: linear-gradient(135.00deg, rgb(23, 242, 95) 0%,rgb(37, 106, 247) 100%);
