--- a/aigc/uni.scss
+++ b/aigc/uni.scss
@@ -8,6 +8,7 @@ $border-gray-color: #A3B4CC;
 $gray-color: #6B748F;
 $link-color: #256AF7;
 $bg-color: linear-gradient(135.00deg, rgb(23, 242, 95),rgb(37, 106, 247) 100%);
+$bg-color-1: linear-gradient(180.00deg, rgb(255, 182, 94),rgb(254, 151, 8) 96.947%,rgb(252, 197, 107) 100%);
 
 
 page {
